--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,8 @@
 # Compiled class file
 *.class
 
+target/
+
 # Log file
 *.log
 
@@ -21,3 +23,6 @@
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+
+.DS_Store
+.idea
