--- a/nifi-sample-nar/pom.xml
+++ b/nifi-sample-nar/pom.xml
@@ -1,4 +1,6 @@
 <!--
+  Sample notice if you want to submit work to the ASF:
+
   Licensed to the Apache Software Foundation (ASF) under one or more
   contributor license agreements. See the NOTICE file distributed with
   this work for additional information regarding copyright ownership.
